# UniversalLoader

./: .gitignore  .markdownlint-cli2.yaml  .yamllint.yaml  AUTHORS.md  cosmo.ini  meson.build  os_detect.c
.github/: dependabot.yaml
.github/workflows/: format.yaml  lint.yaml
loader/sources/: main.c  meson.build  os_detect.c  server.c  server.h
server/: meson.build
server/sources/: main.c  meson.build
subprojects/: facil.wrap  facil.wrap.license
